daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N16_insufficient_q_threshold/h1.hex
2ad489b77b8e1af4465216c95a915bd929027109f6c0cd14c678eb2a6feffa0b794f5c62bc5a0eeed6a81ff41e4b568687e10a8bcdf924d93f05b1a61104c106
